--- a/Homework Website/stylesheet.css
+++ b/Homework Website/stylesheet.css
@@ -31,9 +31,8 @@ h2 {
 
 h3 {
 	font-family: type, sans-serif;
-	color: #DDD;
+	color: #000;
   margin: auto;
-  padding-left: 45px;
 }
 
 html, body {
@@ -75,22 +74,18 @@ li{
 .navbar ul {
 	list-style-type: none;
 }
+
 .content{
-	width: 90%;
 	height: 100%;
 	min-height: 800px;
 	color: #000;
 	text-align: left;
 	margin: auto;
-	padding-right: 40px;
+	padding-right: 6em;
 	padding-top: 3em;
+	padding-left: 6em;
 }
 
-.content p{
-	padding-right: 25px;
-	padding-bottom: 25px;
-	padding-left: 25px;
-}
 
 /* -----------------FONTS----------------- */
 @font-face {
